# debtflow

./: .gitignore  AGENTS.md  Makefile  pyproject.toml  render.yaml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CostBreakdown.tsx  Dashboard.tsx  DebtCard.tsx  LanguageSwitcher.tsx  Layout.tsx  RepoList.tsx  RoiCalculator.tsx  StatsOverview.tsx  Timeline.tsx
frontend/src/i18n/: en.json  es.json  index.ts
src/debtflow/: __init__.py  cli.py  config.py  db.py  models.py
src/debtflow/api/: __init__.py  analyzer.py  cost.py  github.py  main.py
