[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debtflow"
version = "1.0.0"
description = "Technical Debt Quantifier — put a dollar cost on tech debt"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "gitpython>=3.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
debtflow = "debtflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/debtflow"]
